--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,7 @@
     <color name="colorAccent">#FF4081</color>
     <color name="colorTitle">#C51162</color>
     <color name="colorAuthor">@android:color/secondary_text_light</color>
-    <color name="colorSection">#0277BD</color>
+    <color name="colorSectionTechnology">#0277BD</color>
+    <color name="colorSectionScience">#BF360C</color>
     <color name="colorDate">@android:color/tertiary_text_light</color>
 </resources>
