--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,13 +12,15 @@
     <dimen name="listItem_height">72dp</dimen>
 
     <!-- list_item.xml -->
-    <dimen name="listItem_title_fontSize">16sp</dimen>
-    <dimen name="listItem_author_fontSize">12sp</dimen>
+    <dimen name="listItem_image_height">52dp</dimen>
+    <dimen name="listItem_image_width">72dp</dimen>
+    <dimen name="listItem_title_fontSize">15sp</dimen>
+    <dimen name="listItem_author_fontSize">13sp</dimen>
     <dimen name="listItem_date_fontSize">14sp</dimen>
-    <dimen name="listItem_section_fontSize">14sp</dimen>
+    <dimen name="listItem_section_fontSize">13sp</dimen>
     <dimen name="listItem_text_padding">2dp</dimen>
     <dimen name="listItem_text_vertical_spacing">4dp</dimen>
-    <dimen name="listItem_text_horizontal_margin">16dp</dimen>
+    <dimen name="listItem_text_horizontal_margin">12dp</dimen>
 
     <!-- empty list view -->
     <dimen name="emptyList_message1_fontSize">18sp</dimen>
