--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -2,75 +2,84 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="@dimen/vertical_spacing_between_content_areas"
     android:minHeight="@dimen/listItem_height"
-    android:orientation="horizontal">
+    android:orientation="vertical">
 
-    <ImageView
-        android:id="@+id/thumbnail"
-        android:layout_width="@dimen/listItem_height"
-        android:layout_height="@dimen/listItem_height"
-        android:scaleType="centerInside"
-        android:src="@drawable/guardian_logo" />
+    <TextView
+        android:id="@+id/title"
+        style="@style/TitleStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ellipsize="end"
+        android:gravity="center_vertical"
+        android:maxLines="1"
+        android:text="@string/Title" />
 
     <LinearLayout
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/listItem_text_horizontal_margin"
-        android:layout_marginStart="@dimen/listItem_text_horizontal_margin"
-        android:layout_weight="1"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/title"
-            style="@style/TitleStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:gravity="center_vertical"
-            android:maxLines="1"
-            android:text="@string/Title" />
+        <ImageView
+            android:id="@+id/thumbnail"
+            android:layout_width="@dimen/listItem_image_width"
+            android:layout_height="@dimen/listItem_image_height"
+            android:layout_gravity="center"
+            android:scaleType="centerInside"
+            android:src="@drawable/guardian_logo" />
 
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/listItem_text_vertical_spacing"
-            android:orientation="horizontal">
+            android:layout_marginLeft="@dimen/listItem_text_horizontal_margin"
+            android:layout_marginStart="@dimen/listItem_text_horizontal_margin"
+            android:layout_weight="1"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/listItem_text_vertical_spacing"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/author"
+                    style="@style/AuthorStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="7"
+                    android:ellipsize="end"
+                    android:gravity="center_vertical"
+                    android:maxLines="1"
+                    android:text="@string/Author" />
+
+                <TextView
+                    android:id="@+id/date"
+                    style="@style/DateStyle"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="3"
+                    android:ellipsize="end"
+                    android:gravity="center_vertical"
+                    android:maxLines="1"
+                    android:text="@string/Date" />
+
+            </LinearLayout>
 
             <TextView
-                android:id="@+id/author"
-                style="@style/AuthorStyle"
-                android:layout_width="0dp"
+                android:id="@+id/section"
+                style="@style/SectionStyle"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="7"
+                android:layout_marginTop="@dimen/listItem_text_vertical_spacing"
                 android:ellipsize="end"
                 android:gravity="center_vertical"
                 android:maxLines="1"
-                android:text="@string/Author" />
-
-            <TextView
-                android:id="@+id/date"
-                style="@style/DateStyle"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="3"
-                android:ellipsize="end"
-                android:gravity="center_vertical"
-                android:maxLines="1"
-                android:text="@string/Date" />
+                android:paddingLeft="@dimen/listItem_text_padding"
+                android:paddingRight="@dimen/listItem_text_padding"
+                android:text="@string/Section" />
 
         </LinearLayout>
-
-        <TextView
-            android:id="@+id/section"
-            style="@style/SectionStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/listItem_text_vertical_spacing"
-            android:ellipsize="end"
-            android:gravity="center_vertical"
-            android:maxLines="1"
-            android:text="@string/Section" />
 
     </LinearLayout>
 
